fixed button visibility

--- a/web/public/style/main.css
+++ b/web/public/style/main.css
@@ -14,7 +14,9 @@ h1 {
     text-align: center;
 }
 
-
+#leave-button {
+    display: none;
+}
 
 header {
     height: 25vh;
